Fix horizontal overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,6 @@
 @tailwind base;
 
 html {
-  @apply bg-beige;
   font-size: 17px;
 }
 
@@ -32,6 +31,10 @@ html {
   display: none;
 }
 /*! purgecss end ignore */
+
+.content-area {
+  @apply break-words;
+}
 
 .content-area > p a {
   @apply text-blue underline;
